<resources>
    <string name="app_name">DZ Now</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DZ NOW</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="PrefFile">PrefFile</string>
    <string name="LangAR">العربية</string>
    <string name="LangFR">Français</string>
    <string name="about">À propos</string>
    <string name="validate">Valider</string>
    <string name="choose_lang_1">Veuillez choisir la langue de l\'application</string>
    <string name="choose_lang_2">Choix de langue</string>
    <string name="themes">Thèmes</string>
    <string name="selection_text_1">Quels thèmes aimeriez vous voir ?</string>
    <string name="selection_text_2">Veuillez choisir les thèmes que vous aimeriez voir dans l\'affichage d\'accueil
    </string>
    <string name="selection_text_3">Selection de Thèmes</string>
    <string name="article_of_the_day">Articles du jour</string>
    <string name="all">Tout</string>
    <string name="local_articles">Articles locaux</string>
    <string name="saved_articles">vos articles sauvegardés</string>
    <string name="articles_by_theme">Articles par thème</string>
    <string name="top_articles">Top articles</string>
    <string name="language">Langue</string>
    <string name="exit">Quitter</string>
    <string name="other">Autres</string>
    <string name="technologie">Technologie</string>
    <string name="sport">sport</string>
    <string name="culture">culture</string>
    <string name="social">social</string>
    <string name="sante">santé</string>
    <string name="politique">politique</string>
    <string name="economie">economie</string>
    <string name="successful_article_saving">Article sauvegardé</string>
    <string name="language_error_msg">Erreur lors de la modification de la langue</string>
    <string name="language_success_msg">Changement de langue réussi</string>
    <string name="theme_selection_success_msg">Sélection des thèmes réussie</string>
    <string name="app_theme">Thème de l\'application</string>
    <string name="light">Clair</string>
    <string name="dark">Sombre</string>
    <string name="theme_choice_text1">veuillez choisir le thème de l\'application</string>
    <string name="theme_choice_text2">Choix de thème de l\'application</string>

</resources>
