<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:elevation="8dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:lineSpacingExtra="4sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:title="@string/theme_choice_text2" app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/back_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch1" app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView5" app:layout_constraintBottom_toBottomOf="@+id/textView5"/>
    <TextView
            android:text="@string/theme_choice_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="24dp" android:textSize="18sp"
            android:textColor="@android:color/black" app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <TextView
            android:text="@string/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/switch1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:textSize="18sp"
            android:textColor="@android:color/black" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/validate_btn"/>
    <TextView
            android:text="@string/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/switch1" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/switch1"
            app:layout_constraintBottom_toBottomOf="@+id/switch1" android:textSize="18sp"
            android:textColor="@android:color/black"/>
    <Button
            android:text="@string/validate"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/accent_btn"
            android:id="@+id/validate_btn" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>