<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".presentation.activity.ThemeSelectionActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <Button
            android:text="@string/validate"
            android:textColor="@color/white"
            android:background="@drawable/accent_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/validate_btn"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <android.support.v7.widget.Toolbar
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:elevation="8dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:lineSpacingExtra="4sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:title="@string/selection_text_3" app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/back_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layoutDirection="ltr"/>
    <ScrollView
            android:layout_height="0dp"
            android:layout_width="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toTopOf="@+id/validate_btn">


        <android.support.constraint.ConstraintLayout
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/selection_text_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp" android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent" android:textColor="@color/grey_900"/>
            <TextView
                    android:text="@string/selection_text_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/textView2"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:textColor="@color/grey_700"/>
            <com.dznow.project.presentation.utils.MyRecyclerView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/recyclerView"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>